--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ form input[type="submit"] {
     color: #fff;
     border: none;
     padding: 10px 20px;
+    margin: 10px;
     border-radius: 5px;
     outline: none;
     cursor: pointer;
